# commandant-rs

./: .gitignore  .gitlab-ci.yml  10-cloud-init.yaml  Cargo.toml  Makefile  README.md  bring-up-interfaces.sh  ci.yml  config.yaml  custom-routes.sh  install.sh  install_rust.sh  sledtool  stress-ng  stress_ng_output.txt
.github/workflows/: rust.yml
OneForAll_database_file.db/: snap.0000000000000025
RoCE_setup/: config_db.json  install_ucx_ompi.sh  rocm_test_rx.sh  rocm_test_tx.sh  show_mac_sorted.txt  vlan_brief.txt
commandant-rs_database_file.db/: 000013.sst  000016.sst  000021.sst  000031.sst  000034.sst  IDENTITY  MANIFEST-000018  MANIFEST-000023  MANIFEST-000028  MANIFEST-000036  OPTIONS-000030  db
common/: Cargo.toml
common/src/: lib.rs
common/src/adapters/: log_adapter.rs  mod.rs  ps_wasm_adapter.rs  system_info_adapter.rs  web_server_adapter.rs
common/src/ports/: mod.rs  web_server_port.rs
fullstack_rust_app/: Cargo.toml
fullstack_rust_app/backend/: Cargo.toml
fullstack_rust_app/backend/src/: lib.rs
fullstack_rust_app/backend/src/adapters/: mod.rs
fullstack_rust_app/frontend/: Cargo.toml
fullstack_rust_app/frontend/adapters/: web_server_adapter.rs
fullstack_rust_app/frontend/src/: app.rs  lib.rs  main.rs
fullstack_rust_app/frontend/src/adapters/: mod.rs  ps_wasm_adapter.rs  web_server_adapter.rs
fullstack_rust_app/frontend/src/ports/: mod.rs  web_server_port.rs
one_for_all/: Cargo.toml  Makefile
one_for_all/src/: main.rs
one_for_all/src/adapters/: log_adapter.rs  mod.rs  stress_ng_adapter.rs  stress_ng_manager_adapter.rs
one_for_all/src/adapters/linux/: stress-ng
one_for_all/src/adapters/macOS/: stress-ng
one_for_all/src/domain/: stress_ng.rs  stress_test.rs
one_for_all/src/domain/entities/: logging.rs  stress-ng.rs
one_for_all/src/ports/: mod.rs  stress_test.rs
src/: config.yaml  main.rs
src/adapters/: burn_ai_model.rs  database_adapter.rs  log_adapter.rs  mod.rs  ps_command_adapter.rs  stress_ng_adapter.rs  stress_ng_manager_adapter.rs  sysinfo_adapter.rs  web_server_adapter.rs
src/adapters/macOS_apple_silicon/: stress-ng
src/adapters/tests/: stress_ng_adapter_integration_tests.rs
src/application/: ai_prediction_use_case.rs  mod.rs
src/domain/: ai_model.rs  logging.rs  mod.rs  ps_command.rs  stress_ng.rs
src/infrastructure/: ai_model_loader.rs  mod.rs
src/ports/: ai_model_port.rs  database_port.rs  log_port.rs  mod.rs  ps_command_port.rs  stress_test.rs  stress_test_port.rs  sysinfo_port.rs  system_info_port.rs  web_server_port.rs
wasm_module/: Cargo.toml
