[package]
name = "one_for_all"
version = "0.1.0"
edition = "2021"
# path to main.rs or lib.rs
src = "src/main"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
log = "0.4.14"
env_logger = "0.10.1"
fern = "0.6.0"
chrono = "0.4.19"
colored = "2.0.0"
uuid = "1.6.1"
clap = { version = "4.4.11", features = ["derive"] }
wasm-pack = "0.12.1"
wasm-bindgen = "0.2.76"
plotters = "0.3.0"
getrandom = { version = "0.2.11", features = ["js"] }

[lib]
crate-type = ["cdylib", "rlib"]

[[bin]]
name = "one_for_all"
path = "src/main.rs"


