[package]
name = "commandant-rs"
version = "1.75.0"
edition = "2021"

[dependencies]
# Logging
log = "0.4.14"
env_logger = "0.11.1"
fern = "0.6.0"

# Date and Time
chrono = "0.4.19"

# Utilities
colored = "2.0.0"
uuid = "1.6.1"
project-root = "0.2.2"
serde = "1.0.193"
serde_json = "1.0.124"
serde_yaml = "0.9.34"

# Command Line Interface
clap = { version = "4.4.11", features = ["derive"] }

# WebAssembly
wasm-pack = "0.12.1"
wasm-bindgen = "0.2.76"
getrandom = { version = "0.2.11", features = ["js"] }

# Data Visualization
plotters = "0.3.0"

# Compression
bzip2 = "0.4.2"

# System Interactions
errno = "0.3.0"
sysinfo = "0.31.2"

# Web Framework and Async Runtime
actix-web = "4.4.1"
actix-rt = "2.9.0"
tokio = { version = "1", features = ["full", "rt-multi-thread"] }
async-trait = { version = "0.1.81", features = [] }
futures = "0.3.30"

# Database
surrealdb = { version = "1.5.4", features = ["kv-rocksdb"] }

# Machine Learning
burn = { version = "0.13.2", features = ["ndarray", "train", "wgpu", "vision"] }

# Local Dependencies
common = { path = "./common" }
fullstack_rust_app = { path = "./fullstack_rust_app" }

[[bin]]
name = "commandant-rs"
path = "src/main.rs"

[workspace]
members = [
    "fullstack_rust_app",
    "common"
]
