[package]
name = "common"
version = "0.1.0"
edition = "2021"

[dependencies]
async-trait = "0.1.77"
actix-rt = "2.9.0"
log = "0.4.20"
# import Fern for logging
fern = "0.6.0"
chrono = "0.4.33"
colored = { version = "2.1.0", features = [] }
wasm-bindgen = "0.2.90"
web-sys = "0.3.67"
serde_json = "1.0.113"
tokio = "1.35.1"
actix-web = "4.5.1"
serde = { version = "1.0.196", features = ["derive"] }# import log_port from internal crate



