[package]
name = "fullstack_rust_app"
version = "0.1.0"
edition = "2021"


# Dependencies specific to the frontend
[dependencies]
egui = "0.25.0"
eframe = "0.25.0"
wasm-bindgen = "0.2.90"
web-sys = { version = "0.3.67", features = ["console"] }
# The sled crate provides an embedded database.
sled = "0.34.7"
async-trait = "0.1.77"


# The [lib] section defines the configuration for building one or more binary executables.
[lib]
# The name of the library.
name = "backend"
# The path to the source file for the binary executable.
path = "backend/src/lib.rs"



